--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 FRONTEND_URL = http://localhost:3000
-# MONGODB_URI = mongodb+srv://amitprj737:amit123@chat-app.xmmu4yf.mongodb.net/?retryWrites=true&w=majority&appName=chat-app
+
 JWT_SECREAT_KEY = 'ASKDGJSLDJGSLA;KDJIUOEWUTPIOUASKLDGJ;SLDKAJG'
-MONGODB_URI = mongodb://localhost:27017/chat-app_test
+MONGODB_URI = mongodb+srv://sumanghorai203:9QTaNQX9YwDJTa7n@cluster0.mnbl1bv.mongodb.net/
 PORT=8080
