--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "socket.io-client": "^4.7.5",
     "web-vitals": "^4.2.3"
   },
