--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 REACT_APP_CLOUDINARY_CLOUD_NAME = dzcczi2lk
-REACT_APP_BACKEND_URL = http://localhost:8080
+REACT_APP_BACKEND_URL = https://chatapp-197k.onrender.com
